# python-arm-perftests

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: review.yml
benchmarks/: plot.py  run.py  table.py
benchmarks/suites/: __init__.py  numpy_suite.py  python_suite.py  xgboost_suite.py
